--- a/Capitulo1/introduccion.tex
+++ b/Capitulo1/introduccion.tex
@@ -20,13 +20,13 @@
 
 \chapter{Resumen} % section headings are printed smaller than chapter names
 
-El trabajo de esta tesis consiste en el desarrollo de una fuente de alto voltaje y bajo ruido para la implementación en un acelerador de partículas tipo lineal, mediante la utilización  de un sistema de inversor de voltaje y un rectificador del tipo multiplicador, Cockcroft–Walton, así como también la introducción a un control del sistema con lazo cerrado e interfaces gráficas para el usuario.\\
+El trabajo de esta tesis consiste en el desarrollo de una fuente de alto voltaje de bajo ruido para su uso en equipo científico de alta precisión, mediante la utilización  de un sistema de inversor de voltaje y un rectificador del tipo multiplicador, Cockcroft–Walton, así como también la introducción a un control del sistema con lazo cerrado e interfaces gráficas para el usuario.\\
 
-Durante el desarrollo del sistema de alto voltaje se realizo el diseño, la simulación, la fabricación y la validación de los datos proporcionados por el sistema, tomando en cuenta la optimización en el uso de componentes para obtener una reducción en el costo de la fabricación del sistema de alto voltaje.\\
+Durante el desarrollo del sistema de alto voltaje se realizo el diseño, la simulación, la fabricación y la validación de los datos proporcionados por el sistema.\\
 
-Obteniendo como resultado un sistema de bajo costo, el cual puede generar alto voltaje de mediana potencia y bajo ruido, obteniendo una comparación entre fuentes de alto voltaje comerciales implementadas en aceleradores de partículas y reactores nucleares de baja potencia. \\
+Obteniendo como resultado un sistema de bajo costo, el cual puede generar alto voltaje a 10w de potencia, obteniendo una comparación entre fuentes de alto voltaje comerciales implementadas en aceleradores de partículas y reactores nucleares de baja potencia. \\
 
-Como resultado de esta tesis se muestra una comparación entre el diseño realizado y una fuente de alto voltaje comercial de la marca ``CAEN'' las cuales han sido sometidas a cargas similares a las utilizadas en aceleradores de partículas.\newpage
+Como resultado de esta tesis se muestra una comparación entre el diseño realizado y una fuente de alto voltaje comercial de la marca ``CAEN'' las cuales han sido sometidas a cargas similares a las utilizadas en laboratorios alrededor del mundo.\newpage
 
 
 
@@ -63,7 +63,7 @@ investigaciones son de gran importancia.
 
 \subsection{Objetivo General}
 
-Este trabajo tiene por objetivo desarrollar una fuente de alto voltaje de hasta 2 KV y 10 W de potencia, capaz de trabajar con los requerimientos necesarios para alimentar fotomultiplicadores utilizados en un acelerador de partículas lineal.
+Este trabajo tiene por objetivo desarrollar una fuente de alto voltaje de hasta 2 KV y 10 W de potencia.
 
 \subsection{Objetivo Particular}
 
@@ -74,9 +74,9 @@ Este trabajo tiene por objetivo desarrollar una fuente de alto voltaje de hasta 
 \item Diseño de fuente de voltaje a 12V, 180W y bajo ruido.
 \item Simulación de fuente de voltaje a 12V.
 \item Construcción de fuente de voltaje 12V.
-\item Diseño de driver generador de PWM bipolar para inversor.
+\item Diseño de driver modulador de ancho de pulso (PWM) bipolar para inversor.
 \item Simulación de driver generador de PWM bipolar
-\item Construcción de driver generador PWM bipolar.
+\item Construcción de driver (PWM) bipolar.
 \item Diseño de interfaces gráficas para control de inversor
 \item Mediciones y comparaciones entre fuentes comerciales.
 \item Análisis de costos
@@ -84,7 +84,7 @@ Este trabajo tiene por objetivo desarrollar una fuente de alto voltaje de hasta 
 \end{itemize}
 
 \subsection{Hipótesis}
-El diseño adecuando de un sistema de generación de alto voltaje nos permite llevar acabo experimentos y diseño de maquinaria necesaria en aceleradores de partículas, con el cual se podrá desarrollar tecnología aplicada en esta área.
+El diseño adecuando de un sistema de generación de alto voltaje nos permite llevar acabo experimentos y de alta precisión, con el cual se podrá desarrollar tecnología aplicada en esta área.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                           Estructura de la tesis                      %
