--- a/tesis.tex
+++ b/tesis.tex
@@ -126,6 +126,8 @@ Acelerador lineal de electrones. \url{https://www.fis.cinvestav.mx/~sincrotron/d
 Doctor Ingeniero Industrial \url{http://personales.unican.es/rodrigma/PDFs/Trafos.pdf}
 
 \bibitem{rectificador}Rectificador de onda completa. Prof. Julima Anato \url{http://paginas.fisica.uson.mx/horacio.munguia/aula_virtual/Cursos/Instrumentacion\%20I/Documentos/Circuitos_Rectificadores.pdf}
+
+\bibitem{CERN}Multiplicador de voltaje utilizado en CERN en el año 1964. \url{http://cds.cern.ch/record/43889}
 \end{thebibliography}
 
 
