--- a/Capitulo3/diseno_experimento.tex
+++ b/Capitulo3/diseno_experimento.tex
@@ -87,7 +87,7 @@ Se ha simulado esta fuente de voltaje en el programa LTSPICE como se muestra en 
 
 \subsection{Hardware inversor}
 
-Para el inversor se ha implementado una topologia del tipo puente H, ya que es una de las mas utilizadas por los desarrolladores. El integrado BTS7960B es un mosfet de potencia bastante robusto y con una comunidad de desarrollo bastante grande, es por ello que se ha seleccionado este modelo entre los miles que existen en el mercado. Podemos observar el diagrama implementado en la figura y partiendo de el se ha utilizado la placa de desarrollo IBT2 por cuestión de costos. \\
+Para el inversor se ha implementado una topologia del tipo puente H, ya que es una de las mas utilizadas por los desarrolladores. El integrado BTS7960B es un mosfet de potencia bastante robusto y con una comunidad de desarrollo bastante grande, es por ello que se ha seleccionado este modelo entre los miles que existen en el mercado. Podemos observar el diagrama implementado en la figura 3.7 \cite{ibt} y partiendo de el se ha utilizado la placa de desarrollo IBT2 por cuestión de costos. \\
 
 \begin{figure}[H]
 \centering
