--- a/tesis.tex
+++ b/tesis.tex
@@ -128,6 +128,8 @@ Doctor Ingeniero Industrial \url{http://personales.unican.es/rodrigma/PDFs/Trafo
 \bibitem{rectificador}Rectificador de onda completa. Prof. Julima Anato \url{http://paginas.fisica.uson.mx/horacio.munguia/aula_virtual/Cursos/Instrumentacion\%20I/Documentos/Circuitos_Rectificadores.pdf}
 
 \bibitem{CERN}Multiplicador de voltaje utilizado en CERN en el año 1964. \url{http://cds.cern.ch/record/43889}
+
+\bibitem{ibt}Esquematico de control BTN7970. \url{https://www.elecrow.com/download/IBT-2\%20Schematic.pdf}
 \end{thebibliography}
 
 
